# ARIAC-2023---Agile-Robotics-for-Industrial-Automation

./: ENPM663_RWA67.pptx  README.md  ToDoList.md
Documentation/Report/Latex/: main.tex  references.bib  uva-inf-article.cls
robot_msgs/: CMakeLists.txt  package.xml
robot_msgs/srv/: DiscardPart.srv  DropPart.srv  DropTray.srv  MoveRobotToBin.srv  MoveRobotToPart.srv
rwa4/: CMakeLists.txt  package.xml
rwa4/include/: service_client.hpp  shipOrder.hpp
rwa4/launch/: rwa4_app.launch.py
rwa4/nodes/: end_comp_client_exe.py  order_manager.py  service_server_submit_orders.py
rwa4/rwa4/: end_comp_client.py  orders_interface.py  submit_order_interface.py
rwa4/src/: service_client.cpp  shipOrder.cpp
rwa4_interfaces/: CMakeLists.txt  package.xml
rwa4_interfaces/msg/: OrderReady.msg
rwa5/: CMakeLists.txt  package.xml
rwa5/config/: sensors2023.yaml
rwa5/include/rwa5/: ariac_constants.hpp  ariac_tf_util.hpp  locate_parts_trays.hpp  service_client.hpp  shipOrder.hpp
rwa5/launch/: rwa5_app.launch.py
rwa5/nodes/: end_comp_client_exe.py  order_manager.py  submit_order.py
rwa5/rwa5/: end_comp_client.py  orders_interface.py  submit_order_interface.py
rwa5/src/: ariac_tf_util.cpp  locate_parts_trays.cpp  service_client.cpp  shipOrder.cpp
rwa67/: CMakeLists.txt  package.xml
rwa67/include/rwa67/: floor_robot.hpp  locate_parts_trays.hpp
rwa67/launch/: rwa67_app.launch.py
rwa67/nodes/: commander_main.py  end_comp_client_exe.py  order_manager.py  submit_order.py
rwa67/rwa67/: orders_interface.py  submit_order_interface.py
rwa67/src/: ariac_tf_util.cpp  floor_robot.cpp  locate_parts_trays.cpp  main.cpp  service_client.cpp  shipOrder.cpp
trials/: rwa67_summer2023_SB_test1.yaml  rwa67_summer2023_TS_test1.yaml
