<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_msgs</name>
  <version>0.0.0</version>
  
  <description>Custom interfaces for service calls between Python and C++</description>
  
  <maintainer email="zeidk@umd.edu">zeidk</maintainer>
  <maintainer email="sbadshah@umd.edu">Shreejay Badshah</maintainer>
  <maintainer email="arshad22@umd.edu">Arshad Shaik</maintainer>
  <maintainer email="itej89@gmail.com">Tej Kiran</maintainer>
  <maintainer email="tsweene1@umd.edu">Tim Sweeney</maintainer>
  <maintainer email="dhinesh@umd.edu">Dhinesh Rajasekaran</maintainer>
  <maintainer email="Iserbin@umd.edu">Ian Serbin</maintainer>
  
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>


  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>