<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rwa67</name>
  <version>0.0.0</version>
  
  <description>Contains solution for ENPM663 RWA67 assignment</description>
  
  <maintainer email="sbadshah@umd.edu">Shreejay Badshah</maintainer>
  <maintainer email="arshad22@umd.edu">Arshad Shaik</maintainer>
  <maintainer email="itej89@gmail.com">Tej Kiran</maintainer>
  <maintainer email="tsweene1@umd.edu">Tim Sweeney</maintainer>
  <maintainer email="dhinesh@umd.edu">Dhinesh Rajasekaran</maintainer>
  <maintainer email="Iserbin@umd.edu">Ian Serbin</maintainer>
  
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>ariac_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_kdl</depend>
  <depend>geometry_msgs</depend>
  <depend>python3-pykdl</depend>
  <depend>robot_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>orocos_kdl</depend>
  <depend>std_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>moveit_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
